# akong-agent-harness

./: .gitignore  CONTRACTS.md  README.md  pyproject.toml
issues/requirements/: REQ-001.md
src/akong_agent_harness/: __init__.py  llm.py  memory.py  runtime.py  session.py  skills.py  tools.py  workspace.py
tests/: conftest.py  test_llm_client.py  test_memory_rds.py  test_runtime_run.py  test_runtime_smoke.py  test_session.py  test_skills.py  test_tools_registry.py  test_workspace_localfs.py
