[project]
name = "akong-agent-harness"
version = "0.1.0"
description = "通用 agent harness · LLM 周围的软件基础设施 · workspace + memory + tools + skills + llm + session + runtime 7 件套 · 跨平台"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai==2.36.0",
    "anthropic>=0.40.0,<1.0.0",
    "httpx==0.28.1",
    "python-dateutil==2.9.0.post0",
    "pyyaml>=6.0,<7.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
    "pytest-asyncio>=1.0.0,<2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/akong_agent_harness"]
